# Tsunu-Alive

./: .gitignore  ALTERNATIVE_PLAN.md  DEVELOPMENT_PLAN.md  INSTALL.md  README.md  TECH_REFERENCE.md  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json  settings.local.json  tabs.json
.claude/hooks/: check-compact.ps1  check-compact.sh
.claude/skills/uni/: SKILL.md  uni-full-setting.md
.claude/skills/uni/scripts/: read-memories.ps1  read-memories.sh
.github/workflows/: release.yml
assets/character/: uni-appearance.txt
docs/: ASKUSERQUESTION_HOOK_ANALYSIS.md
docs/plans/: 2026-03-04-intellij-plugin-design.md  2026-03-04-intellij-plugin-implementation.md
intellij-plugin/: build.gradle.kts  gradle.properties  settings.gradle.kts
intellij-plugin/src/main/kotlin/com/tsunualive/connector/action/: ConnectAction.kt  LaunchAction.kt  SendContextAction.kt
intellij-plugin/src/main/kotlin/com/tsunualive/connector/listener/: EditorContextTracker.kt
intellij-plugin/src/main/kotlin/com/tsunualive/connector/service/: TsunuAliveService.kt
intellij-plugin/src/main/kotlin/com/tsunualive/connector/settings/: TsunuAliveSettings.kt  TsunuAliveSettingsConfigurable.kt
resources/hooks/: tsunu-permission.ps1  tsunu-permission.sh  tsunu-test-hook.ps1
scripts/: build-release.ps1  build-release.sh  install-macos.sh
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: claude.rs  ide_server.rs  lib.rs  main.rs  permission_server.rs  setup.rs
src/components/: AskUserQuestionDialog.vue  ImageModal.vue  ImagePreview.vue  PermissionDialog.vue  PlanApprovalDialog.vue  SessionSelector.vue  SetupWizard.vue  ToolIndicator.vue
src/composables/: useTabManager.ts
src/constants/: autoAllowTools.ts
src/types/: memories.ts  tabs.ts
src/utils/: claudeEventHandler.ts  ideUtils.ts  markdown.ts
tests/: setup.ts
tests/components/: PermissionDialog.test.ts  ToolIndicator.test.ts
tests/unit/: autoAllowTools.test.ts  claudeEventHandler.test.ts  ideUtils.test.ts  sanity.test.ts
vscode-extension/: .vscodeignore  LICENSE.md  esbuild.js  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
(+2 files in other folders)
