[package]
name = "tsunu_alive_temp"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tsunu_alive_temp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "net", "rt-multi-thread"] }
tokio-tungstenite = "0.24"
futures = "0.3"
chrono = "0.4"
dirs = "5"
axum = "0.7"
tower = "0.4"
tauri-plugin-clipboard-manager = "2.3.2"
png = "0.18.0"
tauri-plugin-dialog = "2.6.0"
which = "7"

[dev-dependencies]
tempfile = "3"

